updated tex and pdf

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -102,10 +102,21 @@ Tabular:\\
 
  List:
  \begin{enumerate}
-  \item pencil
+  \item Escreva x num espaço de x.
   \item paper
+  \begin{enumerate}
+   \item assessments
+   \begin {enumerate}
+   \item Boas
+   
+   \end {enumerate}
+   \item homework
+   \item notes
+   
+  \end{enumerate}
+
  \end{enumerate}
-  pencil
+  
 
 
 \end{document}
