added some lines

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -101,6 +101,7 @@ Tabular:\\
  \end{eqnarray}
 
  List:
+ %As listas enumeradas automaiticamente se identificam
  \begin{enumerate}
   \item Escreva x num espaço de x.
   \item paper
@@ -108,15 +109,32 @@ Tabular:\\
    \item assessments
    \begin {enumerate}
    \item Boas
-   
    \end {enumerate}
    \item homework
    \item notes
-   
   \end{enumerate}
+ \end{enumerate}  
 
+ %uma lista de item nao tem organizacao
+ Itens:
+ \begin{itemize}
+  \item Escreva x num espaço de x.
+  \item paper
+  \begin{itemize}
+   \item assessments
+   \begin {itemize}
+   \item Boas
+   \end {itemize}
+   \item homework
+   \item notes
+  \end{itemize}
+ \end{itemize}  
+
+ \begin{enumerate}
+  \item $a+b=b+a$
+  \item$a+(b+c)=(a+b)$
+  \item$a+(b+c)=ab+ac$
  \end{enumerate}
-  
 
-
+ 
 \end{document}
