added some lines

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -67,7 +67,7 @@ $$\sqrt{\frac{x}{x^2+x+1}}$$
 
 \newpage
 \section{Bracket Tables \& Arrays}
-\huge
+
 $$(x+1)$$
 $$3[2+(x+1)]$$
 $$\{a,b,c\}$$
@@ -90,7 +90,6 @@ Tabular:\\
  
  \end{tabular}
 
- \newpage
  Equation:
  
  \begin{eqnarray}% para esconder os numeros mete se * a frente do eqnarray assim eqnarray* e os numeros desaparecem
@@ -130,11 +129,53 @@ Tabular:\\
   \end{itemize}
  \end{itemize}  
 
+ %para meter mos as labels que quizermos mete se
  \begin{enumerate}
-  \item $a+b=b+a$
-  \item$a+(b+c)=(a+b)$
-  \item$a+(b+c)=ab+ac$
+  \item[Commutative]$a+b=b+a$
+  \item[Associative]$a+(b+c)=(a+b)$
+  \item[Distributive]$a+(b+c)=ab+ac$
+  
  \end{enumerate}
-
  
+ \newpage
+\section{Texto e formatação de documentos}
+Isto ira produzir \textit{texto italico}.
+
+
+Este irá produzir \textbf{texto em negrito}.
+
+Isto ira produzir o texto em fonte \texttt{typewriter}.
+
+
+Porfavor visitem o meu website \texttt{onikenx.github.io}.
+
+Porfavor desculpem a minha tia anabela.
+\begin{center}
+\tiny
+Porfavor desculpem a minha tia anabela.
+
+\small
+Porfavor desculpem a minha tia anabela.
+
+
+\normalsize
+Porfavor desculpem a minha tia anabela.
+
+\large
+Porfavor desculpem a minha tia anabela.
+
+\Large
+Porfavor desculpem a minha tia anabela.
+
+\huge
+Porfavor desculpem a minha tia anabela.
+
+\Huge
+Porfavor desculpem a minha tia anabela.
+
+\end{center}
+coisas
+
+
+
 \end{document}
