added some lines

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -13,6 +13,14 @@
 \pagecolor{black}
 \color{white}
 
+%este pacote faz com que as margens fiquem menores
+\usepackage{fullpage}
+
+%define os limites das margens
+% \usepackage[top=2cm, bottom=2cm, left=1cm, right=1cm]{geometry}
+
+%margin define as margens todas, paperwidth define o comprimento e o paperheight a altura do papel
+% \usepackage[margin=1cm, paperwidth=20cm, paperheight=30cm]{geometry}
 %opening
 \title{Tutorial de \LaTeX{}}
 \author{OnikenX}
@@ -201,5 +209,9 @@ $\rightarrow$
 $\leftarrow$
 
 Aqui tem o \href{http://www.sascha-frank.com/Arrow/latex-arrows.html}{\textit{\textcolor{blue}{link}}} para varias setas que se pode fazer em \LaTeX{}.
+
+\section{Packages, Macros \& Graphics}
+\subsection{Pacotes:}
+    Pacotes servem para expandir as funcionaridades basicas do \LaTeX{}, exemplos podem ser encontrados na pagina fonte que se pode encontrar \href{https://github.com/OnikenX/LaTeX-showcase}{\textcolor{blue}{neste repositorio no github}}.
 
 \end{document}
